# portfolio-manager

./: .bandit  .claudeignore  .dockerignore  .gitignore  .golangci.yml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  TASKS-go-rewrite.md  backlog.md  docker-compose.yml  go.mod  go.sum  handoff-go-rewrite.md  plan.md  pyproject.toml  sqlc.yaml  tasks.md
.antigravitycli/: 5413354e-3500-4ca6-b4b7-47911b60236e.json
.claude/: settings.json
.codex/: skills
.codex/environments/: environment.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-04T11-16-07-986Z.yml  page-2026-06-04T11-23-41-120Z.yml  page-2026-06-13T08-40-33-494Z.yml  page-2026-06-13T08-41-18-672Z.yml  page-2026-06-13T08-48-42-317Z.yml  page-2026-06-13T08-49-30-742Z.yml  page-2026-06-13T08-49-36-164Z.yml  page-2026-06-13T08-50-00-768Z.yml  page-2026-06-13T08-50-18-479Z.yml  page-2026-06-13T08-50-24-134Z.yml  page-2026-06-13T09-05-57-496Z.yml  page-2026-06-13T09-06-04-474Z.yml  page-2026-06-13T09-06-42-907Z.yml
cmd/portfolio-web/: main.go  main_test.go
docs/: architecture.md  conventions.md  delegation.md  docker.md  eval-criteria.md  runbook.md  workflows.md
docs/adr/: 0001-account-type-aware-tax-optimal-rebalancing.md  README.md
internal/accountformat/: accountformat.go  accountformat_test.go
internal/arch/: arch_test.go
internal/container/: container.go  container_test.go
internal/datex/: datex.go  datex_test.go
internal/db/: db.go  db_test.go  migrate_test.go  open_test.go  parity_test.go  schema.sql
internal/kis/: auth.go  base_client.go  domestic_balance.go  domestic_info.go  domestic_order.go  domestic_price.go  error_handler.go  errors.go  kis_test.go  market.go  overseas_info.go  overseas_info_live_test.go  overseas_order.go  overseas_price.go  overseas_price_live_test.go  parser_internal_test.go  price_parser.go  retry_paths_test.go  token.go  token_manager.go  unified_order.go  unified_price.go
internal/ktime/: ktime.go  ktime_test.go
internal/models/: account.go  account_sync.go  deposit.go  group.go  holding.go  portfolio.go  stock.go  (+3 more)
query/: queries.sql
scripts/: check_exim_usd_rate.py  check_kis_domestic_price.py  check_kis_overseas_info.py  check_kis_overseas_price.py  import_data_to_sqlite.py  migrate_supabase_to_sqlite.py  parity_check.sh  setup-tailwind.sh  sweep.sh
tests/: CLAUDE.md  test_account_delete_cascade.py  test_account_repository.py  test_annualized_return.py  test_cancellable_prompt.py  test_dashboard_currency_display.py  test_deposit_first_date.py  test_group_repository.py  test_holding_aggregation.py  test_holding_quantity_decimal.py  test_holding_repository.py  test_holding_repository_delete.py  test_kis_auth_client.py  test_kis_auth_client_expiry.py  test_kis_domestic_info_client.py  test_kis_domestic_price_client.py  test_kis_domestic_price_env.py  test_kis_env_parsing.py  test_kis_file_token_store.py  test_kis_overseas_price_script.py  test_kis_price_parser.py  test_kis_token_manager.py  test_kis_token_refresh.py  test_kis_token_store.py  test_kis_unified_price_client.py  test_kis_us_price_parser.py  test_portfolio_service.py  test_portfolio_sorting.py  test_portfolio_valuation.py  test_price_quote_currency.py  test_price_service.py  test_price_service_currency.py  test_prompt_account_menu.py  test_prompt_group_menu.py  test_prompt_holding_menu.py  test_prompt_menu.py  test_prompt_stock_menu.py  test_quick_update_cash.py  test_rebalance_execution_service.py  test_rebalance_recommendation.py  (+39 more)
(+303 files in other folders)
