[project]
name = "portfolio-manager"
version = "0.1.0"
description = "Terminal portfolio manager using Rich and KIS API."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [
  { name = "kadragon" },
]
dependencies = [
  "rich>=14.2.0",
  "prompt_toolkit>=3.0.52",
  "httpx>=0.28.1",
  "supabase>=2.11.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
portfolio-manager = "portfolio_manager.cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning:pyiceberg.*",
  "ignore::pydantic.warnings.PydanticDeprecatedSince212:pyiceberg.*",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B105", "B106", "B404", "B603"]

[tool.uv]
package = true
