[project]
name = "portfolio-manager"
version = "0.1.0"
description = "Terminal portfolio manager using Rich and KIS API."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [
  { name = "kadragon" },
]
dependencies = [
  "rich>=14.2.0",
  "prompt_toolkit>=3.0.52",
  "httpx>=0.28.1",
  "supabase>=2.11.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
portfolio-manager = "portfolio_manager.cli.main:main"

[dependency-groups]
dev = [
  "ruff>=0.14.11",
  "pyright>=1.1.408",
  "bandit>=1.9.2",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "-q -m \"not integration\" --cov=src/portfolio_manager --cov-branch --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning:pyiceberg.*",
  "ignore::pydantic.warnings.PydanticDeprecatedSince212:pyiceberg.*",
]
markers = [
  "integration: tests that hit external services",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B105", "B106", "B404", "B603"]

[tool.uv]
package = true
