[project]
name = "portfolio-manager"
version = "0.1.0"
description = "Web portfolio manager using FastAPI and KIS API."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [
  { name = "kadragon" },
]
dependencies = [
  "httpx>=0.28.1",
  "python-dotenv>=1.0.0",
  "fastapi>=0.136.1",
  "uvicorn[standard]>=0.46.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.26",
  "peewee>=4.0.5",
]

[project.scripts]
portfolio-web = "portfolio_manager.web.app:run"

[dependency-groups]
dev = [
  "ruff>=0.15.12",
  "pyright>=1.1.409",
  "bandit>=1.9.2",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
addopts = "-q -m \"not integration\" --cov=src/portfolio_manager --cov-branch --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning:pyiceberg.*",
  "ignore::pydantic.warnings.PydanticDeprecatedSince212:pyiceberg.*",
]
markers = [
  "integration: tests that hit external services",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
reportArgumentType = "warning"
reportIncompatibleVariableOverride = false
reportAttributeAccessIssue = "warning"
reportMissingModuleSource = false

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B105", "B106", "B404", "B603"]

[tool.uv]
package = true
